--- a/Index.html
+++ b/Index.html
@@ -26,19 +26,19 @@
         <nav class="nav-bar active">
             <ul>
                 <li class ="blood">
-                    <a href = "../Blood/Index.html" class = "active" style="color: red;">Looking for blood</a>
+                    <a href = "Blood/Index.html" class = "active" style="color: red;">Looking for blood</a>
                 </li>
                 <li>
                     <a href = "">Features</a>
                 </li>
                 <li>
-                    <a href = "../About/about.html">About</a>
+                    <a href = "/About/about.html">About</a>
                 </li>
                 <li>
-                    <a href = "../Contact/sample.html">Contact</a>
+                    <a href = "/Contact/sample.html">Contact</a>
                 </li>    
                 <li>
-                    <a href = "../User/index.html">Login / Sign Up</a>
+                    <a href = "/User/index.html">Login / Sign Up</a>
                 </li>
             <ul>
         </nav>
